bootstrap select z-index fix

--- a/Plugin/Admin/webroot/css/mobile.css
+++ b/Plugin/Admin/webroot/css/mobile.css
@@ -1,3 +1,10 @@
+/* START fix for boostrap select z-index problem */
+[canvas] {
+-webkit-transform: none;
+    -ms-transform: none;
+        transform: none;
+}
+/* END fix for bootstrap select z-index-problem */
 #menu {
     display: none ! important;
 }
@@ -75,7 +82,6 @@ body.pages.home #content {
 	line-height: 25px;
 }
 .bootstrap-select .dropdown-menu {
-    position: static;
 }
 .featherlight-content .mini-upload-form {
 	padding-left: 0 ! important;
